Legacy pre-key store